# AA/gamma spike (rank-1): GPUI-native terminal scene renderer on CURRENT GPUI
# main (pinned zed git rev), with first-party Metal readback -> PNG.
#
# Why git main and not crates.io gpui 0.2.2: main added default-on fg-luminance
# smoothing dilation to the mac glyph rasterizer and removed vertical subpixel
# positioning (zed PR #54728) — 0.2.2 would test the wrong renderer. crates.io
# gpui is dormant (gpui_platform 404s there), so we pin the zed workspace rev
# via git — the "gpui-component pattern". The 0.2.2 build path stays intact in
# the parent crate (spikes/phase0-poc, bin gpui-term).
#
# Pinned rev (zed-industries/zed main as of 2026-07-01):
#   10b07951838e422722e34641f4a9c0bfec9037ff
#
# Readback: gpui's "test-support" feature exposes VisualTestAppContext +
# Window::render_to_image — the SAME draw_primitives/shaders as the shipping
# renderer, drawn into the layer's next drawable (framebuffer_only=false under
# test-support) and read back with get_bytes. This is zed's own visual-test
# harness (crates/zed/src/visual_test_runner.rs uses the identical recipe).
[package]
name = "gpui-term-main"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone crate — do not join any enclosing workspace.
[workspace]

[[bin]]
name = "gpui-term-main"
path = "src/main.rs"

# IME live spike (Phase-0 §13 spike 2, live half): the from-scratch
# InputHandler on the same pinned zed-main-patched checkout. Pure marked-text
# state machine + unit tests in src/bin/ime-spike/ime_state.rs; live window
# gated on NICE_IME_SPIKE_RUN=1. Runbook: ../../ime-spike/RUN-IME.md.
[[bin]]
name = "ime-spike"
path = "src/bin/ime-spike/main.rs"

# Phase-0 §13 spike 11 (part 1): re-run the HEADLINE measurements (streaming
# FPS + per-draw CPU cost + interactive keystroke-latency) on the pinned
# zed-main production-candidate stack, so they can be compared 1:1 against the
# crates.io gpui 0.2.2 numbers (spikes/phase0-poc, bin gpui-term). Reuses the
# parent crate's harness.rs verbatim via #[path] — identical clock, workload
# generator, percentile reducer, memory sampler, and watchdog.
#   headless self-tests: cargo run --bin headline            (workload path)
#                        NICE_MAIN_INTERACTIVE=1 cargo run --bin headline
#   live (display):      NICE_MAIN_RUN=1 cargo run --release --bin headline
#                        NICE_MAIN_RUN=1 NICE_MAIN_INTERACTIVE=1 ... (pty/cat)
# Per-draw CPU + "Draw" signpost need zed-main-headline-hook.patch (already
# applied to ../zed-main-patched; recorded in this directory).
[[bin]]
name = "headline"
path = "src/bin/headline/main.rs"

[dependencies]
# Patched local copy of the pinned rev (10b07951838e422722e34641f4a9c0bfec9037ff),
# rsync'd from ~/.cargo/git/checkouts/zed-a70e2ad075855582/10b0795/ (minus .git)
# into ../zed-main-patched with the bg-luminance curve patch applied
# (../bg-luminance-applied.patch; plan in ../bg-luminance-patch-plan.md).
# Switch back to the git deps below to build the UNPATCHED baseline.
gpui = { path = "../zed-main-patched/crates/gpui", features = ["test-support"] }
gpui_platform = { path = "../zed-main-patched/crates/gpui_platform", features = ["test-support", "font-kit"] }
# Direct dep for the headline bin only: reach the additive draw hook
# (gpui_macos::metal_renderer::nice_draw_metrics — zed-main-headline-hook.patch)
# to register the os_signpost shim + read per-draw CPU durations. Same path/
# version cargo already builds transitively via gpui_platform, so this adds
# no second build of the crate.
gpui_macos = { path = "../zed-main-patched/crates/gpui_macos" }
# gpui = { git = "https://github.com/zed-industries/zed", rev = "10b07951838e422722e34641f4a9c0bfec9037ff", features = ["test-support"] }
# gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "10b07951838e422722e34641f4a9c0bfec9037ff", features = ["test-support", "font-kit"] }

# Same VT core as the FPS spike (spikes/phase0-poc).
alacritty_terminal = "0.26.0"

# AppleFontSmoothing app-domain pref (GPUI main's dilation gate reads it once).
core-foundation = "0.10"
core-foundation-sys = "0.8"

# PNG encoding (gpui's `image` re-export may not enable the png codec).
png = "0.17"

# ---- headline bin (spike 11) ------------------------------------------------
# harness.rs (#[path]-included verbatim from spikes/phase0-poc/src) needs the
# mach clock/task FFI; zed-main already pins mach2 0.5 so we match it.
mach2 = "0.5"
# pty fd O_NONBLOCK clearing (interactive mode), as in the 0.2.2 crate.
libc = "0.2"
# Echo-wakeup channel (pty reader thread -> foreground notify), as in 0.2.2.
futures = "0.3"
# NSView/CAMetalLayer present kick + screen info (hot-plug guard) — the same
# objc2 stack zed-main itself links, so no new native seams.
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSString"] }
objc2-app-kit = { version = "0.3", features = [
    "NSResponder",
    "NSView",
    "NSWindow",
    "NSScreen",
] }
# gpui's Window implements raw_window_handle::HasWindowHandle on main (0.6,
# matching the 0.2.2 crate's pin) — used to capture the NSView pointer.
raw-window-handle = "0.6"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 2
